# case_method-NLP

./: .gitignore  README.md  main_reports.ipynb  pyproject.toml
data/: hasil_perbandingan_model.csv
src/: data_ingestion.py  modeling.py  preprocessing.py  representation.py
